...
            companion object {
                fun text(tag: String): String {
                    return "${tag}Text"
                }

                val ACTIVITY_TITLE = text("activityTitle")
                val EVENT_TITLE_TEXT = text("eventName")
                val START_DATE_TEXT = text("startDate")
                val START_TIME_TEXT = text("startTime")
                val END_DATE_TEXT = text("endDate")
                val END_TIME_TEXT = text("endTime")
                val MAX_PARTICIPANTS_TEXT = text("maxParticipants")
                val LOCATION_TEXT = text("location")
                val DESCRIPTION_TEXT = text("description")

                val START_DATE_DIALOG_TITLE = text("startDateDialogTitle")
                val END_DATE_DIALOG_TITLE = text("endDateDialogTitle")
                val START_TIME_DIALOG_TITLE = text("startTimeDialogTitle")
                val END_TIME_DIALOG_TITLE = text("endTimeDialogTitle")
                val COLOR_DIALOG_TITLE = text("colorDialogTitle")
            }
        }

        class Clickables {
            companion object {
                private fun button(tag: String): String {
                    return "${tag}Button"
                }

                val SAVE = button("save")
                val CANCEL = button("cancel")
                val COLOR_BOX = "colorBox"
            }
        }

        class Icons {
            companion object {
...
                val DESCRIPTION_LABEL = "DESCRIPTION"
            }
        }

        companion object {
            const val SCAFFOLD = "scaffold"
            const val SPORTS = "sports"
        }
    }

    private lateinit var store: CachingStore
    private lateinit var addressAutocompleteHandler: AddressAutocompleteHandler
    private lateinit var selectSportsHandler: (Intent) -> CompletableFuture<List<Sports>>
...
                        modifier = Modifier
                            .padding(horizontal = 10.dp)
                            .verticalScroll(scrollState)
                    ) {
                        TextRow(
                            label = TestTags.Label.EVENT_TITLE_LABEL,
                            tag = TestTags.Texts.EVENT_TITLE_TEXT,
                            value = eventName,
                            onClick = {
                                editTextHandler(
                                    EditTextActivity.getIntent(
                                        context = context,
                                        initialValue = eventName,
...
