...
        companion object {

            const val TITLE = "title"

            class TextFields {
                companion object {
                    const val MAIN = "textField"
                }
            }
            class Buttons {
                companion object {
                    const val DONE = "doneButton"
                    const val CANCEL = "cancelButton"
                }
            }
        }
    }

...
